[gd_scene load_steps=14 format=3 uid="uid://duy34q0exwehe"]

[ext_resource type="Script" uid="uid://dxlfrc1brodwd" path="res://scenes/game_object/player/player.gd" id="1_chboc"]
[ext_resource type="PackedScene" uid="uid://hhx6iyx5cxh" path="res://scenes/ability/sword_ability_controller/sword_ability_controller.tscn" id="2_h7tiq"]
[ext_resource type="PackedScene" uid="uid://bg05buf3ev5eg" path="res://scenes/component/velocity_component/velocity_component.tscn" id="2_rix40"]
[ext_resource type="PackedScene" uid="uid://c6exhv2qdl4nk" path="res://scenes/component/health_component/health_component.tscn" id="2_ss5pk"]
[ext_resource type="SpriteFrames" uid="uid://dagtd40gw1ynx" path="res://resources/main_char_sprites.tres" id="2_vs77x"]
[ext_resource type="PackedScene" uid="uid://bukfjfrlab7av" path="res://scenes/component/hit_flash_component/hit_flash_component.tscn" id="3_rix40"]
[ext_resource type="Shader" uid="uid://bwnxs0n8jaiha" path="res://scenes/component/hit_flash_component/hit_flash_component.gdshader" id="4_rix40"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dy4tu"]
resource_local_to_scene = true
shader = ExtResource("4_rix40")
shader_parameter/lerp_percent = 0.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ss5pk"]
bg_color = Color(0.247059, 0.14902, 0.192157, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tj6oj"]
bg_color = Color(0, 0.872664, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.247059, 0.14902, 0.192157, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_s3670"]
radius = 32.0

[sub_resource type="CircleShape2D" id="CircleShape2D_tj6oj"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_5y8wb"]
radius = 5.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 2
motion_mode = 1
script = ExtResource("1_chboc")

[node name="VelocityComponent" parent="." instance=ExtResource("2_rix40")]
max_speed = 70
acceleration = 70.0

[node name="HealthComponent" parent="." instance=ExtResource("2_ss5pk")]

[node name="HitFlashComponent" parent="." node_paths=PackedStringArray("health_component", "animated_sprite") instance=ExtResource("3_rix40")]
health_component = NodePath("../HealthComponent")
animated_sprite = NodePath("../Visuals/PlayerSprite")
hit_flash_material = SubResource("ShaderMaterial_dy4tu")

[node name="Abilities" type="Node" parent="."]

[node name="SwordAbilityController" parent="Abilities" instance=ExtResource("2_h7tiq")]

[node name="DamageIntervalTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="HealthBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(24, 4)
offset_left = -12.0
offset_top = 2.0
offset_right = 12.0
offset_bottom = 6.0
pivot_offset = Vector2(12, 2)
theme_override_styles/background = SubResource("StyleBoxFlat_ss5pk")
theme_override_styles/fill = SubResource("StyleBoxFlat_tj6oj")
max_value = 1.0
value = 0.5
show_percentage = false

[node name="PickupArea2D" type="Area2D" parent="."]
position = Vector2(0, -5)
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea2D"]
shape = SubResource("CircleShape2D_s3670")

[node name="Visuals" type="Node2D" parent="."]

[node name="PlayerSprite" type="AnimatedSprite2D" parent="Visuals"]
unique_name_in_owner = true
sprite_frames = ExtResource("2_vs77x")
animation = &"player_idle"
frame_progress = 0.319406
offset = Vector2(0, -10)

[node name="CollisionArea2D" type="Area2D" parent="."]
position = Vector2(0, -6)
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionArea2D"]
shape = SubResource("CircleShape2D_tj6oj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_5y8wb")

[node name="Camera2D" type="Camera2D" parent="."]
